--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -73,7 +73,6 @@ button[type="submit"] {
   text-align: center;
   border: none;
   cursor: pointer;
-  width: 10%;
   transition: background .5s;
   &:hover {
     background: #2f3c4e;
@@ -100,4 +99,12 @@ button[type="submit"] {
 
 .vote-arrow.hate:hover {
   color: $color_1;
+}
+
+textarea {
+  resize: none;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
